--- a/Titanic (EDA).ipynb
+++ b/Titanic (EDA).ipynb
@@ -2,13 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "214a539d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ebee906d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load the dataset\n",
     "titanic_df = pd.read_csv('train.csv')"
    ]
@@ -106,9 +116,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "# Visualize survival by passenger class\n",
     "sns.countplot(x='Pclass', hue='Survived', data=titanic_df)\n",
     "plt.title('Survival by Passenger Class')\n",
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "11d25459",
    "metadata": {},
    "outputs": [
